--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,23 +1,23 @@
 :root {
 --color-primary: #ffffff;
---color-secondary: #0563bb;
+--color-secondary-title: #45505b;
+--color-secondary-text: #272829;
+--color-tertiary: #0563bb;
 }
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
 
-a, a:hover, a:focus, a:active {
-    text-decoration: none;
-    color: inherit;
-} 
-  
+
 html {
   font-size: 62.5%; }
 
 body {
-    font-family: ;
+  color: var(--color-secondary-text);
+}
+
+section {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
