--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,5 +4,8 @@
 
 @import "base/base";
 @import "base/typography";
-@import "base/utilies"
+@import "base/utilies";
+
+@import "components/header";
+@import "components/hero";
 
