added svg files and building filterBar section

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -3,7 +3,7 @@
     z-index: 1;
     width: 100%;
     padding-top: 66%;
-    background: url(../assets/background-hero.jpg);
+    background: url(../assets/background_image/background-hero.jpg);
     background-repeat: no-repeat;
     background-position: right;
     background-size: cover;
