--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,23 +37,41 @@ h1, h2, h6 {
 .heading-secondary {
   font-size: 2.4rem; }
 
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  width: 100%;
-  padding: 0 2.3rem; }
+.filterBar {
+  height: 20rem;
+  position: relative; }
 
-.logo {
-  margin-right: auto; }
+.job-search {
+  color: red; }
+  .job-search__form {
+    padding: 1rem;
+    background-color: white; }
+  .job-search__filter {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    background-color: inherit;
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.15); }
+  .job-search select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: 1px solid var(--color-secondary-title);
+    margin-bottom: 2rem;
+    padding: 1rem 2rem;
+    background-color: inherit; }
 
 .hero {
   position: relative;
   z-index: 1;
   width: 100%;
   padding-top: 66%;
-  background: url(../assets/background-hero.jpg);
+  background: url(../assets/background_image/background-hero.jpg);
   background-repeat: no-repeat;
   background-position: right;
   background-size: cover; }
@@ -74,3 +92,14 @@ header {
   transform: translate(-50%, -50%);
   text-align: center;
   white-space: nowrap; }
+
+header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  padding: 0 2.3rem; }
+
+.logo {
+  margin-right: auto; }
