finish to build all homepage layout expect navbar

--- a/src/sass/components/_latestJob.scss
+++ b/src/sass/components/_latestJob.scss
@@ -1,5 +1,6 @@
 .latestJob {
-    padding-top:6rem ;
+    padding-top:$paddingT ;
+    padding-bottom:$paddingB ;
     font-family: "Open Sans", sans-serif;
 }
 
