--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,11 +14,12 @@ html {
 
 body {
   color: var(--color-secondary-text);
-  font-size: 14px; }
+  font-size: 14px;
+  font-family: "Open Sans", sans-serif; }
 
-section {
-  padding-left: 7rem;
-  padding-right: 7rem;
+section, footer {
+  padding-left: 3rem;
+  padding-right: 3rem;
   width: 100%;
   margin-left: auto;
   margin-right: auto; }
@@ -32,6 +33,9 @@ h6 {
 
 a {
   cursor: pointer; }
+
+span {
+  display: block; }
 
 h1, h2, h6 {
   color: var(--color-secondary-title); }
@@ -55,6 +59,49 @@ h1, h2, h6 {
   .heading-secondary--main {
     font-size: 2.4rem;
     font-family: 'Montserrat', sans-serif; }
+
+.comment {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  padding-top: 6rem;
+  background: url(../assets/background_image//bg-comment.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; }
+  .comment::before {
+    z-index: -1;
+    content: "";
+    background: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0; }
+  .comment__content {
+    padding: 6rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .comment__text {
+    font-size: 24px;
+    line-height: 1.75;
+    text-align: center;
+    margin-bottom: 3rem;
+    font-family: "Playfair Display", serif; }
+  .comment__image {
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border: 4px solid white;
+    box-sizing: content-box;
+    margin-bottom: 2rem; }
+  .comment__username {
+    font-size: 1.9rem; }
 
 .filterBar {
   height: 20rem;
@@ -123,6 +170,7 @@ h1, h2, h6 {
 
 .latestJob {
   padding-top: 6rem;
+  padding-bottom: 6rem;
   font-family: "Open Sans", sans-serif; }
 
 .job-list {
@@ -179,12 +227,23 @@ h1, h2, h6 {
 header {
   position: absolute;
   top: 0;
+  left: 2.4rem;
   display: flex;
-  width: 100%;
   margin-top: 2.5rem; }
 
 .logo {
   white-space: nowrap;
   font-size: 2rem;
   font-family: 'Montserrat', sans-serif;
-  margin-right: auto; }
+  font-size: 24px; }
+  .logo--footer {
+    margin-bottom: 2.5rem; }
+
+footer {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+  line-height: 1.75;
+  background-color: #f7f8f9; }
+  footer h6 {
+    margin: 1.8rem 0 1.5rem 0;
+    font-size: 19px; }
