--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -17,11 +17,12 @@ html {
 body {
   color: var(--color-secondary-text);
   font-size: 14px;
+  font-family: "Open Sans", sans-serif;
 }
 
-section {
-  padding-left: 7rem;
-  padding-right: 7rem;
+section,footer {
+  padding-left: 3rem;
+  padding-right: 3rem;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -38,4 +39,8 @@ h6 {
 
 a {
   cursor: pointer;
+}
+
+span {
+  display: block;
 }
