--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,9 +6,11 @@
 @import "base/typography";
 @import "base/utilies";
 
+@import "components/comment";
 @import "components/filterBar";
 @import "components/hero";
 @import "components/latestJob";
 
-@import "layout/header"; 
+@import "layout/header";
+@import "layout/footer";  
  
