started building connexion page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,5 +13,6 @@
 
 @import "layout/header";
 @import "layout/footer";  
-@import "layout/navBar";  
+@import "layout/navBar"; 
+@import "layout/connexion"; 
  
