--- a/src/css/style.css
+++ b/src/css/style.css
@@ -297,3 +297,20 @@ nav {
       height: 2rem; }
     nav li p {
       padding-left: 1.5rem; }
+
+.container--connexion {
+  height: 100vh; }
+
+.signIn, .signUp {
+  height: 50vh;
+  display: flex; }
+
+.signUp {
+  background-color: var(--color-tertiary); }
+
+.inner-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 5rem; }
