--- a/src/css/style.css
+++ b/src/css/style.css
@@ -314,8 +314,11 @@ nav {
 .container--connexion {
   height: 100vh; }
 
+.box {
+  position: relative; }
+
 .signIn,
-.signUp, .create-account, .welcome-back {
+.hello-friend, .create-account, .welcome-back {
   height: 50vh;
   display: flex;
   justify-content: center; }
@@ -333,13 +336,13 @@ nav {
 .signIn h1, .create-account h1 {
   margin-bottom: 3rem; }
 
-.signUp, .welcome-back {
+.hello-friend, .welcome-back {
   background-color: var(--color-tertiary);
   color: var(--color-primary) !important; }
-  .signUp p, .welcome-back p {
+  .hello-friend p, .welcome-back p {
     letter-spacing: 0.5px;
     margin: 2rem 0 3rem; }
-  .signUp h1, .welcome-back h1 {
+  .hello-friend h1, .welcome-back h1 {
     color: inherit; }
 
 .inner-box {
