--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "base/typography";
 @import "base/utilies";
 
+@import "components/category";
 @import "components/comment";
 @import "components/filterBar";
 @import "components/hero";
