--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -116,3 +116,15 @@ th{
   flex-direction: column;
   justify-content: center;
 }
+
+.profilePhoto {
+        height: 9rem;
+        width: 9rem;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        border: 4px solid white;
+        box-sizing: content-box;
+}
