--- a/src/sass/layout/_profilePage.scss
+++ b/src/sass/layout/_profilePage.scss
@@ -1,4 +1,4 @@
-.user, .ad, .compagny {
+.user, .ad, .compagny, .details, .application {
    padding: 2rem 1.5rem;
    border-bottom: 2px solid var(--color-border);
    display: flex;
