--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,8 +15,9 @@
 @import "components/latestJob";
 
 @import "layout/connexion"; 
+@import "layout/createAd"; 
 @import "layout/header"; 
 @import "layout/footer";  
 @import "layout/navBar"; 
-@import "layout/profilePage"; 
+@import "layout/profilePage";   
  
