--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -11,7 +11,7 @@
 }
 
 
-
+// element's HTML properties
 html {
   font-size: 62.5%; }
 
@@ -48,6 +48,14 @@ span {
   display: inline-block;
 }
 
+// layout properties
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+// bouton propreties
 .btn {
   background-color: var(--color-tertiary);
   color: var(--color-primary);
@@ -76,7 +84,19 @@ span {
 
 }
 
-select, input {
+// miscelleanous properties
+.type {
+  display: flex;
+            align-self: end;
+            padding: .5rem .8rem;
+            text-transform: capitalize;
+            color: var(--color-primary);
+            max-width: max-content;
+            background-color: var(--color-fulltime);
+}
+
+// formulaire properties
+select, input, textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -87,15 +107,12 @@ select, input {
   background-color: inherit;
 }
 
-.type {
-  display: flex;
-            align-self: end;
-            padding: .5rem .8rem;
-            text-transform: capitalize;
-            color: var(--color-primary);
-            max-width: max-content;
-            background-color: var(--color-fulltime);
+textarea {
+  width: 100%;
+  height: 10rem;
 }
+
+
 
 // Table properties
 table {
@@ -111,12 +128,7 @@ th{
   text-transform: uppercase;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
+// profile's photo propreties
 .profilePhoto {
         height: 9rem;
         width: 9rem;
