--- a/src/sass/layout/_profilePage.scss
+++ b/src/sass/layout/_profilePage.scss
@@ -5,7 +5,7 @@
    flex-direction: column;
    & h2 {
        margin-bottom: 0;
-       text-align: center;
+       text-align: left;
    }
 }
 
@@ -14,6 +14,9 @@
     display: none;
     font-weight: bold;
     line-height: 1.75;
+    &--show {
+        display: block;
+    }
     ul li {
         display: flex;
         align-items: center;
