--- a/src/css/style.css
+++ b/src/css/style.css
@@ -287,6 +287,10 @@ h1, h2, h6 {
 .compagny__place {
   color: var(--color-secondary-adress); }
 
+.compagny__details {
+  width: 100%;
+  text-align: right; }
+
 .jobPage__content {
   display: flex;
   flex-direction: column; }
