--- a/src/sass/components/_jobList.scss
+++ b/src/sass/components/_jobList.scss
@@ -57,4 +57,8 @@
     &__place {
         color: var(--color-secondary-adress);
     }
+    &__details {
+        width: 100%;
+        text-align: right; 
+    }
 }
