--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -57,6 +57,7 @@ span {
 
 // bouton propreties
 .btn {
+  text-align: center;
   background-color: var(--color-tertiary);
   color: var(--color-primary);
   padding: 1rem 3rem;
