--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,6 +46,7 @@ span {
   justify-content: center; }
 
 .btn {
+  text-align: center;
   background-color: var(--color-tertiary);
   color: var(--color-primary);
   padding: 1rem 3rem;
@@ -461,7 +462,6 @@ nav {
 
 .list {
   margin-top: 2.5rem;
-  display: none;
   font-weight: bold;
   line-height: 1.75; }
   .list--show {
