--- a/src/sass/layout/_profilePage.scss
+++ b/src/sass/layout/_profilePage.scss
@@ -11,7 +11,7 @@
 
 .list {
     margin-top: 2.5rem;
-    display: none;
+    //display: none;
     font-weight: bold;
     line-height: 1.75;
     &--show {
