--- a/src/css/style.css
+++ b/src/css/style.css
@@ -87,9 +87,15 @@ select, input, textarea {
   padding: 1.3rem 2rem;
   background-color: inherit; }
 
+input[type=radio] {
+  color: yellow; }
+
 textarea {
   width: 100%;
   height: 10rem; }
+
+label::first-letter {
+  text-transform: uppercase; }
 
 table {
   width: 100%; }
@@ -328,14 +334,11 @@ h1, h2, h6 {
   padding-bottom: 6rem;
   font-family: "Open Sans", sans-serif; }
 
-.container--connexion {
-  height: 100vh; }
-
 .box {
   position: relative; }
 
 .signIn,
-.hello-friend, .create-account, .welcome-back {
+.hello-friend, .welcome-back {
   height: 50vh;
   display: flex;
   justify-content: center; }
@@ -344,8 +347,7 @@ h1, h2, h6 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  text-align: center; }
+  justify-content: center; }
 
 .signIn a, .create-account a {
   margin: 2rem 0 3rem; }
@@ -363,12 +365,37 @@ h1, h2, h6 {
     color: inherit; }
 
 .inner-box {
-  padding: 0 5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  text-align: center; }
+  justify-content: center; }
+  .inner-box--blue {
+    padding: 0 5rem;
+    text-align: center; }
+
+.create-account {
+  padding: 3rem 0; }
+
+.radioButton {
+  display: flex;
+  flex-direction: column;
+  width: 100%; }
+
+.radio {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  padding: 0;
+  margin-right: 1rem; }
+  .radio:checked {
+    background-color: var(--color-tertiary);
+    border-color: var(--color-tertiary); }
+
+.container-radioOptions {
+  display: flex; }
+
+label.createAd-form__block {
+  margin-bottom: 5px; }
 
 .createAd-form__inner {
   display: flex;
