--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -108,11 +108,19 @@ select, input, textarea {
   background-color: inherit;
 }
 
+input[type=radio]{
+  color: yellow;
+}
+
 textarea {
   width: 100%;
   height: 10rem;
 }
-
+ label {
+   &::first-letter{
+     text-transform: uppercase;
+   }
+ }
 
 
 // Table properties
