--- a/src/sass/layout/_connexion.scss
+++ b/src/sass/layout/_connexion.scss
@@ -1,6 +1,3 @@
-.container--connexion {
-  height: 100vh;
-}
 
 .box {
     position: relative;
@@ -8,12 +5,12 @@
 
 
 .signIn,
-.hello-friend, .create-account, .welcome-back {
+.hello-friend, .welcome-back {
   height: 50vh;
   display: flex;
   justify-content: center;
 }
-
+ 
 .signIn, .create-account {
   &__form {
     @include flexAllCenter;
@@ -39,8 +36,42 @@
 }
 
 .inner-box {
-  padding: 0 5rem;
   @include flexAllCenter;
+  &--blue {
+    padding: 0 5rem;
+    text-align: center;
+  }
+   
 }
 
+.create-account {
+  padding: 3rem 0;
+}
 
+.radioButton {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.radio {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  padding: 0;
+  margin-right: 1rem;
+  &:checked {
+    background-color: var(--color-tertiary);
+    border-color: var(--color-tertiary);
+  }
+}
+
+.container-radioOptions {
+display: flex;
+
+}
+
+label.createAd-form__block {
+  margin-bottom: 5px;
+ }
+ 
