--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,19 +1,19 @@
 :root {
---color-primary: #ffffff;
---color-secondary-adress: #6b6b6b;
---color-secondary-title: #45505b;
---color-secondary-text: #272829;
---color-secondary-placeholder:#454545;
---color-secondary-button:#6c757d;
---color-tertiary: #0563bb;
---color-border: #ededee;
---color-fulltime: #28a745;
+  --color-primary: #ffffff;
+  --color-secondary-adress: #6b6b6b;
+  --color-secondary-title: #45505b;
+  --color-secondary-text: #272829;
+  --color-secondary-placeholder: #454545;
+  --color-secondary-button: #6c757d;
+  --color-tertiary: #0563bb;
+  --color-border: #ededee;
+  --color-fulltime: #28a745;
 }
-
 
 // element's HTML properties
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 body {
   color: var(--color-secondary-text);
@@ -21,7 +21,9 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-section, footer, .container {
+section,
+footer,
+.container {
   padding-left: 4rem;
   padding-right: 4rem;
   width: 100%;
@@ -34,9 +36,9 @@ h2 {
 }
 
 h6 {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   line-height: 1.2;
-  font-family:'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-transform: capitalize;
 }
 
@@ -64,13 +66,13 @@ span {
   appearance: none;
   border: 1px solid var(--color-tertiary);
   text-transform: capitalize;
-  &--transparent{
+  &--transparent {
     background-color: transparent;
     border: 1px solid currentColor;
   }
-  &--grey{
+  &--grey {
     background-color: transparent;
-    color:var(--color-secondary-button);
+    color: var(--color-secondary-button);
     border: 1px solid currentColor;
   }
   &--round {
@@ -80,24 +82,24 @@ span {
     -moz-border-radius: 3rem;
     -ms-border-radius: 3rem;
     -o-border-radius: 3rem;
-    
-}
-
+  }
 }
 
 // miscelleanous properties
 .type {
   display: flex;
-            align-self: end;
-            padding: .5rem .8rem;
-            text-transform: capitalize;
-            color: var(--color-primary);
-            max-width: max-content;
-            background-color: var(--color-fulltime);
+  align-self: end;
+  padding: 0.5rem 0.8rem;
+  text-transform: capitalize;
+  color: var(--color-primary);
+  max-width: max-content;
+  background-color: var(--color-fulltime);
 }
 
 // formulaire properties
-select, input, textarea {
+select,
+input,
+textarea {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -108,27 +110,84 @@ select, input, textarea {
   background-color: inherit;
 }
 
-
 textarea {
   width: 100%;
   height: 10rem;
 }
- label {
-   &::first-letter{
-     text-transform: uppercase;
-   }
- }
+label {
+  &::first-letter {
+    text-transform: uppercase;
+  }
+}
 
+input[type="range"] {
+  width: 100%;
+  margin: 5.3px 0;
+  background-color: transparent;
+  -webkit-appearance: none;
+}
+input[type="range"]:focus {
+  outline: none;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 17px;
+  height: 17px;
+  background: var(--color-tertiary);
+  border: var(--color-tertiary);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+input[type="range"]::-ms-thumb {
+  width: 17px;
+  height: 17px;
+  background: var(--color-tertiary);
+  border: var(--color-tertiary);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  width: 17px;
+  height: 17px;
+  background: var(--color-tertiary);
+  border: var(--color-tertiary);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-track {
+  background: var(--color-border);
+  border: 0.2px solid var(--color-border);
+  /* border-radius: 10.4px; */
+  width: 100%;
+  /* height: 8.4px; */
+  cursor: pointer;
+}
+input[type="range"]::-ms-track {
+  background: var(--color-border);
+  border: 0.2px solid var(--color-border);
+  width: 100%;
+  cursor: pointer;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  background: var(--color-border);
+  border: 0.2px solid var(--color-border);
+  width: 100%;
+  cursor: pointer;
+}
 
 // Table properties
 table {
   width: 100%;
 }
-tr,thead {
+tr,
+thead {
   text-align: center;
 }
 
-th{
+th {
   min-width: 72px;
   color: var(--color-tertiary);
   text-transform: uppercase;
@@ -136,13 +195,13 @@ th{
 
 // profile's photo propreties
 .profilePhoto {
-        height: 9rem;
-        width: 9rem;
-        border-radius: 50%;
-        -webkit-border-radius: 50%;
-        -moz-border-radius: 50%;
-        -ms-border-radius: 50%;
-        -o-border-radius: 50%;
-        border: 4px solid white;
-        box-sizing: content-box;
+  height: 9rem;
+  width: 9rem;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border: 4px solid white;
+  box-sizing: content-box;
 }
