--- a/src/sass/components/_jobList.scss
+++ b/src/sass/components/_jobList.scss
@@ -58,7 +58,13 @@
         color: var(--color-secondary-adress);
     }
     &__details {
-        width: 100%;
-        text-align: right; 
+        width: 1rem;
     }
 }
+
+.details-box {
+    width: 100%;
+    justify-content: flex-end;
+    display: flex;
+   }
+   
