--- a/src/css/style.css
+++ b/src/css/style.css
@@ -385,7 +385,7 @@ h1, h2, h6 {
   border: 1px solid #EDEDED;
   margin-bottom: 3rem;
   text-transform: capitalize; }
-  .inner button:first-of-type {
+  .inner button:first-of-type, .inner a:first-of-type {
     margin-bottom: 2rem; }
 
 .latestJob {
@@ -555,9 +555,17 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between; }
+  .list__compagny, .list__user {
+    display: flex;
+    justify-content: space-between; }
 
 .inner--profilePage {
-  padding: 3rem 0; }
+  padding: 3rem 0;
+  display: flex;
+  flex-direction: column; }
 
 .compagny > div:nth-child(2) {
   justify-content: flex-start; }
+
+.category > h2 {
+  color: var(--color-tertiary); }
