--- a/src/sass/components/_jobPage.scss
+++ b/src/sass/components/_jobPage.scss
@@ -34,7 +34,7 @@
     border: 1px solid #EDEDED;
     margin-bottom:3rem;
     text-transform: capitalize;
-    & button:first-of-type {
+    & button:first-of-type, a:first-of-type{
         margin-bottom: 2rem;
     }
-}
+} 
