--- a/src/sass/layout/_profilePage.scss
+++ b/src/sass/layout/_profilePage.scss
@@ -21,13 +21,24 @@
         align-items: center;
         justify-content: space-between;
     }
+    &__compagny, &__user {
+        display: flex;
+        justify-content: space-between;
+    }
 }
+
 
 .inner--profilePage {
     padding: 3rem 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .compagny > div:nth-child(2) {
     justify-content: flex-start;
    }
-   
+
+.category > h2 {
+    color: var(--color-tertiary);
+}
+
