--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,36 +1,35 @@
 // Font
 // Monserrat Black 900
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap");
 
-h1,h2,h6 {
-    color: var(--color-secondary-title)
+h1,
+h2,
+h6 {
+  color: var(--color-secondary-title);
 }
 
-
-
 .heading-primary {
+  text-align: center;
+  &--main {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 2.4rem;
     text-align: center;
-    &--main {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 700;
-        font-size: 2.4rem;
-        text-align: center;
-        line-height: 1.75;
-    }
-    &--sub{
-        font-size: 1.4rem;
-        font-family: "Open Sans", sans-serif;
-        font-weight: 400;
-        line-height: 1.75;
-    }
+    line-height: 1.75;
+  }
+  &--sub {
+    font-size: 1.4rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    line-height: 1.75;
+  }
 }
 
 .heading-secondary {
-    margin-bottom: 4rem;
-    text-align: center;
-    &--main{
-        font-size: 2.4rem;
-        font-family: 'Montserrat', sans-serif;
-    }
+  margin-bottom: 4rem;
+  text-align: center;
+  &--main {
+    font-size: 2.4rem;
+    font-family: "Montserrat", sans-serif;
+  }
 }
-
