--- a/src/sass/components/_jobPage.scss
+++ b/src/sass/components/_jobPage.scss
@@ -1,40 +1,40 @@
 .jobPage {
-    
-    &__content {
-        display: flex;
-        flex-direction: column;
+  &__content {
+    display: flex;
+    flex-direction: column;
+  }
+  &__description {
+    line-height: 1.75;
+    h6 {
+      margin-top: 3rem;
+      margin-bottom: 1rem;
     }
-    &__description {
-        line-height: 1.75;
-        h6{
-            margin-top: 3rem;
-            margin-bottom: 1rem;
-        }
+  }
+  &__prerequisite {
+    line-height: 1.75;
+    & li {
+      list-style: disc;
     }
-    &__prerequisite {
-        line-height: 1.75;
-        & li {
-            list-style: disc;
-        }
-        h6{
-            margin-top: 1.5rem;
-            margin-bottom: 1rem;
-        }
+    h6 {
+      margin-top: 1.5rem;
+      margin-bottom: 1rem;
     }
-} 
+  }
+}
 
 .side-bar {
-    margin-top: 5rem;
+  margin-top: 5rem;
 }
 
 .inner {
-    display: flex;
-    flex-direction: column;
-    padding: 25px;
-    border: 1px solid #EDEDED;
-    margin-bottom:3rem;
-    text-transform: capitalize;
-    & button:first-of-type, a:first-of-type{
-        margin-bottom: 2rem;
-    }
-} 
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+  border: 1px solid #ededed;
+  margin-bottom: 3rem;
+  text-transform: capitalize;
+  & button:first-of-type,
+  a:first-of-type {
+    margin-bottom: 2rem;
+  }
+}
