--- a/src/sass/components/_jobPage.scss
+++ b/src/sass/components/_jobPage.scss
@@ -33,8 +33,10 @@
   border: 1px solid #ededed;
   margin-bottom: 3rem;
   text-transform: capitalize;
-  & button:first-of-type,
-  a:first-of-type {
-    margin-bottom: 2rem;
+  & button:not(:first-child),
+  a:not(:first-child) {
+    margin-top: 2rem;
   }
+  
 }
+ 
