--- a/src/sass/layout/_navBar.scss
+++ b/src/sass/layout/_navBar.scss
@@ -1,5 +1,5 @@
 nav {
-    display: none;
+display: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -46,6 +46,16 @@ nav {
         & p {
             padding-left: 1.5rem;
         }
+      
     }
   }
+
+li.navigation__items > a {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+
+
 
