--- a/src/sass/layout/_navBar.scss
+++ b/src/sass/layout/_navBar.scss
@@ -56,6 +56,13 @@ li.navigation__items > a {
     width: 100%;
 }
 
+.cross-closed-menu {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    cursor: pointer;
+}
+
 
 
 
