protected routes & error page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,5 +19,6 @@
 @import "layout/header"; 
 @import "layout/footer";  
 @import "layout/navBar"; 
-@import "layout/profilePage";   
+@import "layout/profilePage";  
+@import "layout/unauthorized"
  
