--- a/src/sass/layout/_createAd.scss
+++ b/src/sass/layout/_createAd.scss
@@ -1,4 +1,4 @@
-.createAd-form {
+.createAd-form, .updateAd-form {
     &__inner{
     display: flex;
     flex-direction: column;
@@ -13,5 +13,5 @@
         color: var(--color-tertiary);
         width: 100%;
     } 
-     
+      
 } 
