--- a/src/sass/layout/_unauthorized.scss
+++ b/src/sass/layout/_unauthorized.scss
@@ -18,16 +18,16 @@ $fire-reverse:#EFAC41, #DE8531, #6C1305, black;
   }
 }
  
-.container {
-  background-color: $white;
-  color: $black;
-  text-align: center;
-  font-family: "Open Sans";
-  font-size: 1.3rem;
-  h1 {
-    font-size: 2.5rem;
-  }
-}
+// .container {
+//   background-color: $white;
+//   color: $black;
+//   text-align: center;
+//   font-family: "Open Sans";
+//   font-size: 1.3rem;
+//   h1 {
+//     font-size: 2.5rem;
+//   }
+// }
  
 .message {
   max-width: 700px;
