--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/jobPage";
 @import "components/latestJob";
 
+@import "layout/application"; 
 @import "layout/connexion"; 
 @import "layout/createAd"; 
 @import "layout/header"; 
