--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -67,6 +67,8 @@ span {
   appearance: none;
   border: 1px solid var(--color-tertiary);
   text-transform: capitalize;
+  width: max-content;
+  display: block;
   &--transparent {
     background-color: transparent;
     border: 1px solid currentColor;
