--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -16,6 +16,7 @@ h6 {
     font-size: 2.4rem;
     text-align: center;
     line-height: 1.75;
+    text-transform: uppercase;
   }
   &--sub {
     font-size: 1.4rem;
