--- a/src/sass/components/_filterBar.scss
+++ b/src/sass/components/_filterBar.scss
@@ -22,6 +22,9 @@
     left: 50%;
     transform: translateX(-50%);
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.15);
+    @include respond(desktop){
+      width: 70%;
+    }
     
   }
  
