--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import "layout/application"; 
 @import "layout/connexion"; 
 @import "layout/createAd"; 
+@import "layout/errorPage"; 
 @import "layout/header"; 
 @import "layout/footer";  
 @import "layout/navBar"; 
