--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,12 +15,13 @@
 @import "components/latestJob";
 
 @import "layout/application"; 
-@import "layout/connexion"; 
 @import "layout/createAd"; 
 @import "layout/errorPage"; 
 @import "layout/header"; 
 @import "layout/footer";  
 @import "layout/navBar"; 
 @import "layout/profilePage";  
+@import "layout/register";  
+@import "layout/signIn"; 
 @import "layout/unauthorized"
  
